--- a/themes/snow-white/layout/_partial/footer.ejs
+++ b/themes/snow-white/layout/_partial/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="max-w-5xl mx-auto py-2 border-t border-solid border-gray-100 text-sm text-gray-500">
+<footer class="max-w-3xl mx-auto py-2 border-t border-solid border-gray-100 text-xs text-gray-500 pb-5">
     <div class="flex space-x-4">
         <div class="copyright-year flex-initial">
             <% var current = date(Date.now(), "YYYY") %>
