--- a/themes/snow-white/layout/layout.ejs
+++ b/themes/snow-white/layout/layout.ejs
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang=<%= config.language === 'zh' ? 'zh-CN' : config.language %>>
+<html lang=<%= config.language === 'zh' ? 'zh-CN' : config.language %> class="bg-gray-100">
 <%- partial('_partial/head') %>
 
 <body>
-<%- partial('_partial/header') %>
 
-<div class="index-container">
-    <% if(!is_current('/404')){%>
-    <% } %>
+<div class="index-container pt-8 pb-6 md:px-0 px-4">
+    <div class="main-content-wrapper max-w-3xl m-auto bg-white pt-8 pb-6 px-10">
+        <%- partial('_partial/header') %>
 
-    <div class="main-content-wrapper">
+        <% if(!is_current('/404')){%>
+        <% } %>
+
         <%- body %>
+        <%- partial('_partial/footer', null, {cache: false}) %>
     </div>
 </div>
 
-<%- partial('_partial/footer', null, {cache: false}) %>
 </body>
 </html>
