--- a/themes/snow-white/layout/index.ejs
+++ b/themes/snow-white/layout/index.ejs
@@ -36,3 +36,18 @@ layout: layout
         <% }); %>
     </div>
 </section>
+
+<div class="pagination max-w-3xl mx-auto pb-10">
+    <div class="flex flex-row">
+        <div class="flex-1">
+            <% if (page.prev){ %>
+                <a href="<%- config.root %><%- page.prev_link %>">&larr; Newer Posts</a>
+            <% } %>
+        </div>
+        <div class="flex-1 text-right">
+            <% if (page.next){ %>
+                <a href="<%- config.root %><%- page.next_link %>">Older Posts &rarr;</a>
+            <% } %>
+        </div>
+    </div>
+</div>
