feat: 完成了自定义主题

--- a/themes/snow-white/layout/_partial/footer.ejs
+++ b/themes/snow-white/layout/_partial/footer.ejs
@@ -1,5 +1,5 @@
-<footer class="max-w-3xl mx-auto py-2 border-t border-solid border-gray-100 text-xs text-gray-500 pb-5">
-    <div class="sm:flex space-y-2 sm:space-y-0 sm:space-x-4">
+<footer class="max-w-3xl mx-auto py-2 border-t border-solid border-gray-100 text-xs pb-5">
+    <div class="sm:flex space-y-2 sm:space-y-0 sm:space-x-2">
         <div class="copyright-year sm:flex-initial">
             <% var current = date(Date.now(), "YYYY") %>
             &copy;
@@ -9,9 +9,9 @@
             <%= current %>
             <span class="footer-author"><%= config.author %>.</span>
             <span class="power-by">
-                <%= __('footer.powered_prefix') %> <a class="hexo-link text-gray-500" href="https://hexo.io/">Hexo</a> and
+                <%= __('footer.powered_prefix') %> <a class="hexo-link " href="https://hexo.io/">Hexo</a> and
                 <a
-                        class="theme-link text-gray-500"
+                        class="theme-link "
                         href="https://github.com/frostfan/hexo-theme-polarbear">Snow White</a>
 
                 <% if (__('footer.powered') !== 'footer.powered') { %>
@@ -23,7 +23,7 @@
         <% if (theme.icp) { %>
             <div class="flex sm:flex-initial items-center">
                 <span>
-                    <a href="https://beian.miit.gov.cn" target="_blank" class="text-gray-500"><%= theme.icp %></a>
+                    <a href="https://beian.miit.gov.cn" target="_blank" class=""><%= theme.icp %></a>
                 </span>
             </div>
         <% } %>
