--- a/themes/snow-white/layout/archive.ejs
+++ b/themes/snow-white/layout/archive.ejs
@@ -26,7 +26,7 @@ site.posts.sort('date').reverse().forEach(function(post){
                     <ul class="pl-10 list-disc">
                             <li class="">
                                 <time class="mr-2 text-gray-500" datetime="<%= post.date %>"><%= post.date.format("MM-DD") %></time>
-                                <a href="<%- post.url %>" class="inline-block">
+                                <a href="<%- config.root %><%- post.path %>" class="inline-block">
                                     <h2 class="post-title">
                                         <%= post.title %>
                                     </h2>
