--- a/themes/snow-white/layout/archive.ejs
+++ b/themes/snow-white/layout/archive.ejs
@@ -32,7 +32,7 @@ site.posts.sort('date').reverse().forEach(function(post){
                                     </h2>
                                     <% if (post.subtitle && post.subtitle.length) { %>
                                         <h3 class="post-subtitle text-sm text-gray-500">
-                                            <%- post.subtitle %>
+                                            <%= post.subtitle %>
                                         </h3>
                                     <% } %>
                                 </a>
