--- a/themes/snow-white/layout/_partial/header.ejs
+++ b/themes/snow-white/layout/_partial/header.ejs
@@ -1,6 +1,6 @@
-<header class="border-b border-solid border-gray-100">
+<header class="">
     <div class="max-w-3xl mx-auto">
-        <div class="py-4 border-b border-slate-900/10 lg:border-0 dark:border-slate-300/10 mx-0">
+        <div class="py-4 border-b border-slate-900/10 border-0 dark:border-slate-300/10 mx-0">
             <div class="relative sm:flex sm:items-center">
                 <div class="flex-none sm:flex-initial">
                     <a class="flex-none overflow-hidden md:w-auto" href="<%= url_for('.') %>">
