--- a/themes/snow-white/layout/_partial/nav.ejs
+++ b/themes/snow-white/layout/_partial/nav.ejs
@@ -1,6 +1,21 @@
 <div class="flex-none sm:flex-auto flex items-center sm:justify-end lg:w-0 space-x-4">
-    <a href="<%= url_for(config.home_dir || '/') %>" class="whitespace-nowrap text-gray-500 <% if(is_home()){ %> <%- "active" %> <% } %>"> <%= __('nav.home') %> </a>
-    <a href="<%= url_for(config.tag_dir) %>" class="whitespace-nowrap text-gray-500 <% if(is_current('tags')){ %> <%- "active" %> <% } %>"> <%= __('nav.tags') %> </a>
-    <a href="<%= url_for(config.archive_dir) %>" class="whitespace-nowrap text-gray-500 <% if(is_current('archives')){ %> <%- "active" %> <% } %>"> <%= __('nav.archives') %> </a>
-    <a href="<%= url_for(config.about) %><%- 'about/' %>" class="whitespace-nowrap text-gray-500 <% if(is_current('about')){ %> <%- "active" %> <% } %>"> <%= __('nav.about') %> </a>
+    <% if (theme.nav.showHome) { %>
+        <a href="<%= url_for(config.home_dir || '/') %>"
+           class="whitespace-nowrap text-gray-500 <% if(is_home()){ %> <%- "active" %> <% } %>"> <%= __('nav.home') %> </a>
+    <% } %>
+
+    <% if (theme.nav.showTag) { %>
+        <a href="<%= url_for(config.tag_dir) %>"
+           class="whitespace-nowrap text-gray-500 <% if(is_current('tags')){ %> <%- "active" %> <% } %>"> <%= __('nav.tags') %> </a>
+    <% } %>
+
+    <% if (theme.nav.showArchives) { %>
+        <a href="<%= url_for(config.archive_dir) %>"
+           class="whitespace-nowrap text-gray-500 <% if(is_current('archives')){ %> <%- "active" %> <% } %>"> <%= __('nav.archives') %> </a>
+    <% } %>
+
+    <% if (theme.nav.showAbout) { %>
+        <a href="<%= url_for(config.about) %><%- 'about/' %>"
+           class="whitespace-nowrap text-gray-500 <% if(is_current('about')){ %> <%- "active" %> <% } %>"> <%= __('nav.about') %> </a>
+    <% } %>
 </div>
