--- a/themes/snow-white/layout/_partial/toc.ejs
+++ b/themes/snow-white/layout/_partial/toc.ejs
@@ -1,5 +1,5 @@
-<div class="">
-    <div id="toc" class="toc toc-article">
+<div>
+    <div id="toc">
         <%- toc(item.content, {list_number: false}) %>
     </div>
 </div>
