--- a/themes/snow-white/layout/layout.ejs
+++ b/themes/snow-white/layout/layout.ejs
@@ -4,7 +4,7 @@
 
 <body>
 
-<div class="index-container pt-8 pb-6 md:px-0 px-4">
+<div class="index-container py-2 md:py-8 px-2 md:px-0">
     <div class="main-content-wrapper max-w-3xl m-auto bg-white pt-8 pb-6 px-10">
         <%- partial('_partial/header') %>
 
