--- a/themes/snow-white/layout/page.ejs
+++ b/themes/snow-white/layout/page.ejs
@@ -1,5 +1,5 @@
 <section class="max-w-3xl mx-auto py-10">
-    <div class="archive-container">
+    <div class="">
         <%- page.content %>
     </div>
 </section>
