--- a/themes/snow-white/layout/post.ejs
+++ b/themes/snow-white/layout/post.ejs
@@ -3,24 +3,23 @@ layout: layout
 ---
 
 <article class="max-w-3xl mx-auto py-10 typo">
-    <div class="post-container">
-        <h1 class="post-title" style="margin-top: 0;">
+    <div>
+        <h1 style="margin-top: 0;">
             <%- page.title.replace(/[<>&"]/g,function(c){
                 return {'<':'&lt;','>':'&gt;','&':'&amp;','"':'&quot;'}[c];
             }) %>
         </h1>
 
-        <div class="post-meta">
+        <div>
             <span>
-                <time datetime="<%= page.date %>"><%- page.date.format(config.date_format) %>
-                </time>
+                <time datetime="<%= page.date %>"><%- page.date.format(config.date_format) %></time>
             </span>
 
             <% if (page.tags.length){ %>
             <div class="mt-2">
                 <span><%= __('post.tags') %>：</span>
                 <% page.tags.forEach(function(tag, i){ %>
-                    <a class="tag text-gray-500 no-underline" href="<%= config.root %>tags/#<%= tag.name %>" title="<%= tag.name %>"><%= tag.name %></a>
+                    <a class="text-gray-500 no-underline" href="<%= config.root %>tags/#<%= tag.name %>" title="<%= tag.name %>"><%= tag.name %></a>
                     <% if (i < page.tags.length - 1) { %>
                     <span>,</span>
                     <% } %>
@@ -29,12 +28,14 @@ layout: layout
             <% } %>
         </div>
 
-        <div class="post-content pt-10 <% if(config.post_style && !config.post_style.indent) {%>no-indent<% } %>">
-            <div class="">
+        <section class="pt-10 <% if(config.post_style && !config.post_style.indent) {%>no-indent<% } %>">
+            <aside>
                 <%- partial('_partial/toc', {item: page, index: false}) %>
-            </div>
+            </aside>
 
-            <%- page.content %>
-        </div>
+            <section>
+                <%- page.content %>
+            </section>
+        </section>
     </div>
 </article>
