--- a/themes/snow-white/layout/post.ejs
+++ b/themes/snow-white/layout/post.ejs
@@ -11,15 +11,29 @@ layout: layout
         </h1>
 
         <div>
-            <span>
-                <time datetime="<%= page.date %>"><%- page.date.format(config.date_format) %></time>
-            </span>
+            <div class="flex">
+                <span>
+                    <time datetime="<%= page.date %>"><%- page.date.format(config.date_format) %></time>
+                </span>
+
+                <% if(theme.post.showVisit) { %>
+                <span class="px-3 text-gray-300">|</span>
+                <span id="busuanzi_container_page_pv">
+                    <%= __('post.visit') %> <span id="busuanzi_value_page_pv"></span> <%= __('post.visit_postfix') %>
+                </span>
+                <% } %>
+
+                <% if(page.external) { %>
+                    <span class="px-3 text-gray-300">|</span>
+                    <%- link_to(page.external, __('post.external'), {external: true}) %>
+                <% } %>
+            </div>
 
             <% if (page.tags.length){ %>
             <div class="mt-2">
                 <span><%= __('post.tags') %>：</span>
                 <% page.tags.forEach(function(tag, i){ %>
-                    <a class="text-gray-500 no-underline" href="<%= config.root %>tags/#<%= tag.name %>" title="<%= tag.name %>"><%= tag.name %></a>
+                    <a class="" href="<%= config.root %>tags/#<%= tag.name %>" title="<%= tag.name %>"><%= tag.name %></a>
                     <% if (i < page.tags.length - 1) { %>
                     <span>,</span>
                     <% } %>
@@ -29,10 +43,6 @@ layout: layout
         </div>
 
         <section class="pt-10 <% if(config.post_style && !config.post_style.indent) {%>no-indent<% } %>">
-            <aside>
-                <%- partial('_partial/toc', {item: page, index: false}) %>
-            </aside>
-
             <section>
                 <%- page.content %>
             </section>
