feat: 更新了文章和修改模板小细节问题

--- a/themes/snow-white/source/css/typo.css
+++ b/themes/snow-white/source/css/typo.css
@@ -192,6 +192,7 @@ html {
     display: block;
     font-size: 0.8rem;
     -webkit-overflow-scrolling: touch;
+    overflow-x: auto;
   }
 
   .gutter pre {
