--- a/themes/snow-white/layout/post.ejs
+++ b/themes/snow-white/layout/post.ejs
@@ -2,50 +2,47 @@
 layout: layout
 ---
 
-<article class="max-w-3xl mx-auto py-10 typo">
-    <div>
-        <h1 style="margin-top: 0;">
-            <%- page.title.replace(/[<>&"]/g,function(c){
-                return {'<':'&lt;','>':'&gt;','&':'&amp;','"':'&quot;'}[c];
-            }) %>
-        </h1>
+<article class="max-w-4xl mx-auto py-10 typo">
+    <h1 style="margin-top: 0;">
+        <%- page.title.replace(/[<>&"]/g, function (c) {
+            return {'<': '&lt;', '>': '&gt;', '&': '&amp;', '"': '&quot;'}[c];
+        }) %>
+    </h1>
 
-        <div>
-            <div class="flex">
+    <div>
+        <div class="flex">
                 <span>
                     <time datetime="<%= page.date %>"><%- page.date.format(config.date_format) %></time>
                 </span>
 
-                <% if(theme.post.showVisit) { %>
+            <% if(theme.post.showVisit) { %>
                 <span class="px-3 text-gray-300">|</span>
                 <span id="busuanzi_container_page_pv">
                     <%= __('post.visit') %> <span id="busuanzi_value_page_pv"></span> <%= __('post.visit_postfix') %>
                 </span>
-                <% } %>
+            <% } %>
 
-                <% if(page.external) { %>
-                    <span class="px-3 text-gray-300">|</span>
-                    <%- link_to(page.external, __('post.external'), {external: true}) %>
-                <% } %>
-            </div>
-
-            <% if (page.tags.length){ %>
-            <div class="mt-2">
-                <span><%= __('post.tags') %>：</span>
-                <% page.tags.forEach(function(tag, i){ %>
-                    <a class="" href="<%= config.root %>tags/#<%= tag.name %>" title="<%= tag.name %>"><%= tag.name %></a>
-                    <% if (i < page.tags.length - 1) { %>
-                    <span>,</span>
-                    <% } %>
-                <% }) %>
-            </div>
+            <% if(page.external) { %>
+                <span class="px-3 text-gray-300">|</span>
+                <%- link_to(page.external, __('post.external'), {external: true}) %>
             <% } %>
         </div>
 
-        <section class="pt-10 <% if(config.post_style && !config.post_style.indent) {%>no-indent<% } %>">
-            <section>
-                <%- page.content %>
-            </section>
-        </section>
+        <% if (page.tags.length){ %>
+            <div class="mt-2">
+                <span><%= __('post.tags') %>：</span>
+                <% page.tags.forEach(function(tag, i){ %>
+                    <a class="" href="<%= config.root %>tags/#<%= tag.name %>"
+                       title="<%= tag.name %>"><%= tag.name %></a>
+                    <% if (i < page.tags.length - 1) { %>
+                        <span>,</span>
+                    <% } %>
+                <% }) %>
+            </div>
+        <% } %>
     </div>
+
+    <section class="pt-10 <% if(config.post_style && !config.post_style.indent) { %>no-indent<% } %>">
+        <%- page.content %>
+    </section>
 </article>
