--- a/themes/snow-white/layout/_partial/pagination.ejs
+++ b/themes/snow-white/layout/_partial/pagination.ejs
@@ -1,14 +1,14 @@
-<div class="pagination max-w-4xl mx-auto pb-10 text-sm">
-    <div class="flex flex-row">
-        <div class="flex-1">
-            <% if (page.prev){ %>
-                <a href="<%- config.root %><%- page.prev_link %>">&larr; <%= __('page.prev') %></a>
-            <% } %>
-        </div>
-        <div class="flex-1 text-right">
-            <% if (page.next){ %>
-                <a href="<%- config.root %><%- page.next_link %>"><%= __('page.next') %> &rarr;</a>
-            <% } %>
-        </div>
+<% if (page.prev || page.next) { %>
+<section class="pagination w-full pb-10 flex flex-row text-sm">
+    <div class="flex-1">
+        <% if (page.prev){ %>
+            <a href="<%- config.root %><%- page.prev_link %>">&larr; <%= __('page.prev') %></a>
+        <% } %>
     </div>
-</div>
+    <div class="flex-1 text-right">
+        <% if (page.next){ %>
+            <a href="<%- config.root %><%- page.next_link %>"><%= __('page.next') %> &rarr;</a>
+        <% } %>
+    </div>
+</section>
+<% } %>
